--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "nuxi preview"
   },
   "devDependencies": {
+    "@nuxt-themes/alpine": "^1.5.0",
+    "@nuxtjs/plausible": "^0.2.0",
     "nuxt": "3.3.3",
-    "@nuxt-themes/alpine": "^1.5.0"
+    "sitemap": "^7.1.1"
   }
 }
