--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@nuxtjs/plausible": "^0.2.0",
     "nuxt": "3.3.3",
     "sitemap": "^7.1.1"
+  },
+  "dependencies": {
+    "@nuxtjs/sitemap": "^2.4.0"
   }
 }
