--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt-themes/alpine": "^1.5.0",
+    "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/plausible": "^0.2.0",
     "nuxt": "3.3.3",
     "sitemap": "^7.1.1"
