--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -35,10 +35,13 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 8
       - name: Setup Pages
         uses: actions/configure-pages@v3
-      - run: npm install
-      - run: npx nuxt build --preset github_pages
+      - run: pnpm install
+      - run: pnpm build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
