--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -31,7 +31,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - run: corepack enable
+      - name: Setup Node
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
