--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -38,8 +38,8 @@ jobs:
       - uses: pnpm/action-setup@v4
         with:
           version: 8
-      # - name: Setup Pages
-      #   uses: actions/configure-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
       - run: pnpm install
       - run: pnpm build --preset github_pages
       - name: Upload artifact
