--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/plausible": "^0.2.0",
     "nuxt": "^3.12.2",
+    "pinceau": "^0.15.4",
     "sitemap": "^7.1.1"
   }
 }
