--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt-themes/alpine": "^1.5.0",
     "@nuxtjs/google-fonts": "^3.0.2",
     "@nuxtjs/plausible": "^0.2.0",
+    "consola": "^3.2.3",
     "nuxt": "^3.12.2",
     "pinceau": "^0.15.4",
     "sitemap": "^7.1.1"
