--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,7 @@ updates:
    directory: "/"
    schedule:
      interval: weekly
+  - package-ecosystem: "github-actions"
+   directory: ".github/workflows"
+   schedule:
+     interval: weekly
