--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,11 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				
+				"astro-build.astro-vscode",
+				"bradlc.vscode-tailwindcss",
+				"dbaeumer.vscode-eslint",
+				"esbenp.prettier-vscode",
+				"unifiedjs.vscode-mdx"
 			]
 		}
 	},
