--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,9 @@ jobs:
         path: ./.cache
         key: ${{ runner.os }}-eleventy-fetch-cache
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build the site
-      run: npm run build
+    - run: npm install --os=linux --cpu=x64 sharp
+    - run: npm install
+    - run: npm run build
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v4
