Fix LinkedIn link

--- a/src/_data/personal.yaml
+++ b/src/_data/personal.yaml
@@ -1,6 +1,6 @@
 platforms:
   bluesky: 'https://bsky.app/profile/marcduiker.dev'
-  linkedin: 'https://www.linkedin.com/in/marcduiker'
+  linkedin: 'https://www.linkedin.com/in/mduiker'
   sessionize: 'https://sessionize.com/marcduiker'
   mastodon: 'https://mstdn.social/@marcduiker'
   youtube: 'https://www.youtube.com/@marcduiker'
